# flowodm

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_PLAN.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: api.rst  changelog.rst  ci_cd.rst  conf.py  consumer_loops.rst  consuming.rst  index.rst  migration.rst  models.rst  producing.rst  quickstart.rst  schema_registry.rst  settings_profiles.rst
examples/: basic_producer.py  microservice.py
src/flowodm/: __init__.py  cli.py  connection.py  consumer.py  exceptions.py  model.py  schema.py  settings.py
tests/: __init__.py  conftest.py  test_connection.py  test_consumer.py  test_exceptions.py  test_integration.py  test_model.py  test_schema.py  test_settings.py
