[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowodm"
version = "0.2.2"
description = "A lightweight ODM for Apache Kafka with Avro schema support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Andrey Vykhodtsev", email = "andy-v-github@outlook.com" }
]
keywords = ["kafka", "avro", "pydantic", "odm", "schema-registry", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "confluent-kafka[schemaregistry]>=2.3.0",  # Includes schema registry dependencies
    "fastavro>=1.8.0",
]

[project.optional-dependencies]
schema-gen = [
    "dataclasses-avroschema>=0.50.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.scripts]
flowodm = "flowodm.cli:main"

[project.urls]
Homepage = "https://github.com/Aprova-GmbH/flowodm"
Documentation = "https://flowodm.readthedocs.io"
Repository = "https://github.com/Aprova-GmbH/flowodm"
Changelog = "https://github.com/Aprova-GmbH/flowodm/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/flowodm"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests (no Kafka required)",
    "integration: Integration tests (require real Kafka)",
]
